language/tests/error/TypeError03.sl
def main() {  
  "4" && 4;  
}  
